# yolotolabelme

./: LICENSE  README.md  pyproject.toml
src/: yolotolabelme.py
